--- a/CanvasDragNDrop/App.xaml
+++ b/CanvasDragNDrop/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CanvasDragNDrop"
-             StartupUri="Windows\MainWindow\AlternateMainWindow.xaml"
+             StartupUri="Windows\SchemeSelectionWindow\SchemeSelectionWindow.xaml"
              >
              <!--StartupUri="Depricated\Windows\MainWindow.xaml"-->
     <Application.Resources>
