--- a/CanvasDragNDrop/Windows/SchemeSelectionWindow/SchemeSelectionWindow.xaml
+++ b/CanvasDragNDrop/Windows/SchemeSelectionWindow/SchemeSelectionWindow.xaml
@@ -5,57 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CanvasDragNDrop.Windows.SchemeSelectionWindow"
         mc:Ignorable="d"
-        Title="SchemeSelectionWindow" Height="450" Width="800">
-    <Grid>
+        Title="Выбор схемы" Height="450" Width="550"
+        Name="StartWindowView"
+        Loaded="GetSchemasList">
+    <Grid Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="60"/>
-            <RowDefinition Height="340"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="35"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="560"/>
-            <ColumnDefinition Width="240"/>
-        </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="0" Grid.Row="1" Margin="10,0,0,0" >
-            <Label  Content="Список схем" FontSize="16"/>
-            <TextBox Width="250" HorizontalAlignment="Left" Margin="6,0,0,0"/>
-        </StackPanel>
-        <ItemsControl Grid.Row="2">
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Grid>
-                        <StackPanel Margin="10,0,0,0" >
-                            <Label Content="Название схемы"/>
-                            <Label Content="Путь к папке" FontSize="10"/>
-                        </StackPanel>
-                    </Grid>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
-        <Grid Grid.Row="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="55"/>
-                <RowDefinition Height="55"/>
-                <RowDefinition Height="55"/>
-            </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0" Margin="10,0,0,0" >
-                <Label Content="Название схемы"/>
-                <Label Content="Путь к папке" FontSize="10"/>
-            </StackPanel>
-            <StackPanel Grid.Row="1"  Margin="10,0,0,0" >
-                <Label Content="Название схемы"/>
-                <Label Content="Путь к папке" FontSize="10"/>
-            </StackPanel>
-            <StackPanel Grid.Row="2"  Margin="10,0,0,0" >
-                <Label Content="Название схемы"/>
-                <Label Content="Путь к папке" FontSize="10"/>
-            </StackPanel>
-        </Grid>
-        <StackPanel Grid.Row="2" Grid.Column="1"  Margin="10,10,10,10">
-            <Label Content="Начало работы" Margin="10,0,0,0"/>
-            <Button Width="200" Height="50" Content="Создать схему" Margin="0,0,0,5"/>
-            <Button Width="200" Height="50" Content="Открыть папку со схемой"  Margin="0,0,0,5"/>
-            <Button Width="200" Height="50" Margin="0,0,0,5"/>
-        </StackPanel>
+        <Label Content="Выберите существующую схему или создайте новую" Grid.Row="0" FontWeight="Bold" FontSize="18" HorizontalContentAlignment="Center"/>
+        <ListView Grid.Row="1" 
+                  ItemsSource="{Binding ElementName=StartWindowView, Path=AvailableSchemas}" 
+                  DisplayMemberPath="SchemaName" 
+                  SelectedIndex="{Binding ElementName=StartWindowView,Path=SelectedSchemaIndex}" 
+                  Margin="0,10,0,10" 
+                  ScrollViewer.CanContentScroll="False"
+                  ScrollViewer.VerticalScrollBarVisibility="Auto"
+                  SelectionChanged="OpenSchema"/>
+        <Button Content="Создать новую схему" Grid.Row="2" FontSize="16" Click="CreateNewSchema"/>
     </Grid>
 </Window>
