--- a/CanvasDragNDrop/Windows/LoginWindow/SetupWindow.xaml
+++ b/CanvasDragNDrop/Windows/LoginWindow/SetupWindow.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="CanvasDragNDrop.Windows.LoginWindow.LoginWindow"
+﻿<Window x:Class="CanvasDragNDrop.Windows.LoginWindow.SetupWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CanvasDragNDrop.Windows.LoginWindow"
+        xmlns:local="clr-namespace:CanvasDragNDrop.Windows.LoginWindow.Classes"
+        xmlns:classes="clr-namespace:CanvasDragNDrop.Windows.LoginWindow.Classes"
         mc:Ignorable="d"
-        Title="LoginWindow" Height="150" Width="400">
+        Title="SetupWindow" Height="200" Width="350">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -18,7 +19,7 @@
         </Grid.RowDefinitions>
         <StackPanel Orientation="Vertical">
             <Label Content="Адрес" FontSize="8"/>
-            <TextBox Width="100" Margin="5,0,0,10" HorizontalAlignment="Left" />
+            <TextBox Width="100" Margin="5,0,0,10" HorizontalAlignment="Left" Text="{x:Static local:SetupClass.MockAdress}"/>
         </StackPanel>
         <StackPanel Grid.Column="1" Orientation="Vertical">
             <Label Content="Порт" FontSize="8"/>
@@ -32,6 +33,6 @@
             <Label Content="Пароль" FontSize="8"/>
             <TextBox Width="100" Margin="5,0,0,10" HorizontalAlignment="Left" />
         </StackPanel>
-        <Button Grid.Row="2" Grid.ColumnSpan="2" Height="20" Width="70" Content="Войти"/>
+        <Button Grid.Row="2" Grid.ColumnSpan="2" Height="20" Width="70" Content="Войти" Click="Button_Click"/>
     </Grid>
 </Window>
