Implemented models versions, removed deprecated files, replaced icons, binded setup window with api class, implemented storring settings in file

--- a/CanvasDragNDrop/Windows/MainWindow/AlternateMainWindow.xaml
+++ b/CanvasDragNDrop/Windows/MainWindow/AlternateMainWindow.xaml
@@ -12,7 +12,12 @@
         </Grid.RowDefinitions>
 
         <Menu DockPanel.Dock="Top" Grid.Row="0">
-            <MenuItem Header="Проект">
+            <Menu.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <DockPanel HorizontalAlignment="Stretch"/>
+                </ItemsPanelTemplate>
+            </Menu.ItemsPanel>
+            <MenuItem Header="Проект" HorizontalAlignment="Left">
                 <MenuItem Header="Создать новый проект"/>
                 <MenuItem Header="Сохранить схему" Click="SaveScheme"/>
                 <MenuItem Header="Синхронизировать данные" Click="GetFromServerElemList"/>
@@ -33,13 +38,16 @@
                     </Style>
                 </MenuItem.ItemContainerStyle>
             </MenuItem>-->
-            <MenuItem Header="Меню пользователя" >
+            <MenuItem Header="Меню пользователя" HorizontalAlignment="Left">
                 <MenuItem Header="Изменить логин/пароль"/>
                 <MenuItem Header="Посмотреть доступный проекты"/>
                 <MenuItem Header="Выйти"/>
             </MenuItem>
              <!--Test meny items--> 
             <!--<MenuItem Name="TestMenu" Header="{Binding _state}"/>-->
+
+            <MenuItem Header="User" HorizontalAlignment="Right"/>
+
         </Menu>
 
         <Canvas  x:Name="CanvasViewport"
