--- a/CanvasDragNDrop/Windows/BlockModelCreationWindow/UserItems/BaseExpression.xaml
+++ b/CanvasDragNDrop/Windows/BlockModelCreationWindow/UserItems/BaseExpression.xaml
@@ -17,6 +17,9 @@
                 <Label VerticalAlignment="Center" Content="{Binding ExpOrder, RelativeSource={RelativeSource AncestorType=UserControl}}" Width="50" FontWeight="Bold"/>
                 <Label Content="Тип расчётного выражения:"/>
                 <Label Content="{Binding ElementName=BaseExpressionUserItem, Path=ExpressionType}" FontWeight="Bold"/>
+                <ComboBox >
+                    <Label Content="HEOS::R32+R125"/>
+                </ComboBox>
             </WrapPanel>
             <WrapPanel HorizontalAlignment="Right" Grid.Column="1">
                 <Image Source="/Resources/arrow_up.png" Width="30" Height="30" Margin="0,0,0,0" MouseDown="MoveUpExpression"  />
