--- a/CanvasDragNDrop/Windows/ModelsExplorer/ModelsExplorer.xaml
+++ b/CanvasDragNDrop/Windows/ModelsExplorer/ModelsExplorer.xaml
@@ -5,16 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:src="clr-namespace:CanvasDragNDrop.APIClases" xmlns:useritems="clr-namespace:CanvasDragNDrop.Windows.ModelsExplorer.UserItems"
         mc:Ignorable="d"
-        Title="Каталог моделей" Height="450" Width="300"
+        Title="Каталог моделей" Height="450" Width="400"
         Name="ModelExplorerWindow">
     <Grid>
         <useritems:ModelsTreeControl 
             AvailableCatalogModels="{Binding ElementName=ModelExplorerWindow, Path=AvailableCatalogModels}"
-            ModelSelected="ModelDoubleClicked"
+            x:Name="MyTreeView" AllowDrop="True"
+            ModelSelected="ModelVersionDoubleClicked"
             ModelDelete="Image_MouseLeftButtonDownDeleteModel"
             CatalogDelete="Image_MouseLeftButtonDownDeleteCatalog"
             CatalogAdd="Image_MouseLeftButtonDownAddCatalog"
-            x:Name="MyTreeView" AllowDrop="True"
             PreviewMouseLeftButtonDown="MyTreeView_PreviewMouseLeftButtonDown"
             PreviewMouseMove="MyTreeView_PreviewMouseMove"
             Drop="MyTreeView_Drop"/>
