--- a/CanvasDragNDrop/Windows/SetupWindow/SetupWindow.xaml
+++ b/CanvasDragNDrop/Windows/SetupWindow/SetupWindow.xaml
@@ -3,10 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CanvasDragNDrop.Windows.LoginWindow.Classes"
+        xmlns:local="clr-namespace:CanvasDragNDrop"
         xmlns:classes="clr-namespace:CanvasDragNDrop.Windows.LoginWindow.Classes"
+        Closing="WindowClosing"
         mc:Ignorable="d"
-        Title="SetupWindow" Height="200" Width="350">
+        Title="Настройки" Height="200" Width="350">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -18,21 +19,21 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Vertical">
-            <Label Content="Адрес" FontSize="8"/>
-            <TextBox Width="100" Margin="5,0,0,10" HorizontalAlignment="Left" Text="{x:Static local:SetupClass.MockAdress}"/>
+            <Label Content="Адрес" />
+            <TextBox Margin="5,0,5,10" Text="{Binding Path=(local:API.Address), UpdateSourceTrigger=PropertyChanged}"/>
         </StackPanel>
         <StackPanel Grid.Column="1" Orientation="Vertical">
-            <Label Content="Порт" FontSize="8"/>
-            <TextBox Width="100" Margin="5,0,0,10" HorizontalAlignment="Left" />
+            <Label Content="Порт" />
+            <TextBox Margin="5,0,5,10" Text="{Binding Path=(local:API.Port), UpdateSourceTrigger=PropertyChanged}" />
         </StackPanel>
         <StackPanel Grid.Row="1" Orientation="Vertical">
-            <Label Content="Логин" FontSize="8"/>
-            <TextBox Width="100" Margin="5,0,0,10" HorizontalAlignment="Left" />
+            <Label Content="Логин" />
+            <TextBox  Margin="5,0,5,10" Text="{Binding Path=(local:API.Username), UpdateSourceTrigger=PropertyChanged}" />
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical">
-            <Label Content="Пароль" FontSize="8"/>
-            <TextBox Width="100" Margin="5,0,0,10" HorizontalAlignment="Left" />
+            <Label Content="Пароль"/>
+            <PasswordBox Name="PasswordField" Margin="5,0,5,10" Password="" PasswordChanged="OnPasswordChanged" />
         </StackPanel>
-        <Button Grid.Row="2" Grid.ColumnSpan="2" Height="20" Width="70" Content="Войти" Click="Button_Click"/>
+        <Button Grid.Row="2" Grid.ColumnSpan="2" Margin="5,0,5,0" FontSize="14" Content="Войти" Click="Login"/>
     </Grid>
 </Window>
