--- a/CanvasDragNDrop/Windows/SetupWindow/SetupWindow.xaml
+++ b/CanvasDragNDrop/Windows/SetupWindow/SetupWindow.xaml
@@ -1,10 +1,9 @@
-﻿<Window x:Class="CanvasDragNDrop.Windows.LoginWindow.SetupWindow"
+﻿<Window x:Class="CanvasDragNDrop.Windows.SetupWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CanvasDragNDrop"
-        xmlns:classes="clr-namespace:CanvasDragNDrop.Windows.LoginWindow.Classes"
         Closing="WindowClosing"
         mc:Ignorable="d"
         Title="Настройки" Height="200" Width="350">
