--- a/CanvasDragNDrop/Windows/BlockModelCreationWindow/BlockModelCreationWindow.xaml
+++ b/CanvasDragNDrop/Windows/BlockModelCreationWindow/BlockModelCreationWindow.xaml
@@ -29,7 +29,7 @@
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
                                     <Label Grid.Column="0" Content="Название" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="14" Margin="0,0,5,0"/>
-                                    <TextBox Grid.Column="1" TextWrapping="Wrap" VerticalContentAlignment="Center" FontSize="14" Text="{Binding Title}"/>
+                                    <TextBox IsReadOnly="{Binding IsReadOnly}" Grid.Column="1" TextWrapping="Wrap" VerticalContentAlignment="Center" FontSize="14" Text="{Binding Title}"/>
                                 </Grid>
                                 <Grid Margin="0,5,0,0">
                                     <Grid.ColumnDefinitions>
@@ -37,7 +37,7 @@
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
                                     <Label Grid.Column="0" Content="Описание" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="14" Margin="0,0,5,0"/>
-                                    <TextBox Grid.Column="1" TextWrapping="Wrap" FontSize="14" Text="{Binding Description}" VerticalContentAlignment="Center"/>
+                                    <TextBox IsReadOnly="{Binding IsReadOnly}" Grid.Column="1" TextWrapping="Wrap" FontSize="14" Text="{Binding Description}" VerticalContentAlignment="Center"/>
                                 </Grid>
 
                                 <Label Content="Входные потоки" FontSize="18" VerticalAlignment="Center"/>
