--- a/CanvasDragNDrop/Windows/BlockInstancePropertiesWindow/BlockInstancePropertiesWindow.xaml
+++ b/CanvasDragNDrop/Windows/BlockInstancePropertiesWindow/BlockInstancePropertiesWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="CanvasDragNDrop.Windows.BlockInstancePropertiesWindow"
+﻿<Window x:Class="CanvasDragNDrop.Windows.BlockInstancePropertiesWindow.BlockInstancePropertiesWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CanvasDragNDrop.Windows"
+        xmlns:local="clr-namespace:CanvasDragNDrop.Windows.BlockInstancePropertiesWindow"
         mc:Ignorable="d"
         Name="BlockInstancePropertiesWindowUI"
         Title="Свойства блока"
