--- a/CanvasDragNDrop/Windows/BlockModelCreationWindow/BlockModelCreationWindow.xaml
+++ b/CanvasDragNDrop/Windows/BlockModelCreationWindow/BlockModelCreationWindow.xaml
@@ -1,10 +1,10 @@
 ﻿<Window xmlns:UserItems="clr-namespace:CanvasDragNDrop.UserItems"  
-        x:Class="CanvasDragNDrop.BlockModelCreationWindow"
+        x:Class="CanvasDragNDrop.Windows.BlockModelCreationWindow.BlockModelCreationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CanvasDragNDrop"
+        xmlns:local="clr-namespace:CanvasDragNDrop.Windows.BlockModelCreationWindow"
         xmlns:classes="clr-namespace:CanvasDragNDrop.Windows.BlockModelCreationWindow.Classes" xmlns:useritems="clr-namespace:CanvasDragNDrop.Windows.ModelsExplorer.UserItems"
         mc:Ignorable="d"
         x:Name="Window1"
@@ -29,7 +29,7 @@
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
                                     <Label Grid.Column="0" Content="Название" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="14" Margin="0,0,5,0"/>
-                                    <TextBox IsReadOnly="{Binding IsReadOnly}" Grid.Column="1" TextWrapping="Wrap" VerticalContentAlignment="Center" FontSize="14" Text="{Binding Title}"/>
+                                    <TextBox IsReadOnly="{Binding IsEditing}" Grid.Column="1" TextWrapping="Wrap" VerticalContentAlignment="Center" FontSize="14" Text="{Binding Title}"/>
                                 </Grid>
                                 <Grid Margin="0,5,0,0">
                                     <Grid.ColumnDefinitions>
@@ -37,7 +37,7 @@
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
                                     <Label Grid.Column="0" Content="Описание" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="14" Margin="0,0,5,0"/>
-                                    <TextBox IsReadOnly="{Binding IsReadOnly}" Grid.Column="1" TextWrapping="Wrap" FontSize="14" Text="{Binding Description}" VerticalContentAlignment="Center"/>
+                                    <TextBox IsReadOnly="{Binding IsEditing}" Grid.Column="1" TextWrapping="Wrap" FontSize="14" Text="{Binding Description}" VerticalContentAlignment="Center"/>
                                 </Grid>
 
                                 <Label Content="Входные потоки" FontSize="18" VerticalAlignment="Center"/>
@@ -237,7 +237,7 @@
                                 <Button Background="#E7E7E7" Content="Добавить выражение" Margin="10,0,10,0" Padding="3" Click="AddExpression"/>
                                 <Button Background="#E7E7E7" Content="Проверить модель блока" Margin="10,10,10,0" Padding="3" Click="CheckBlock" FontSize="16"/>
                                 <useritems:ModelsTreeControl Padding="10,10,10,0"
-                                    
+                                                             Visibility="{Binding CreationElementsVisibility}"
                                     AvailableCatalogModels="{Binding AvailableDirs}" 
                                     FolderSelected="ChangeSaveDir" 
                                     />
