--- a/CanvasDragNDrop/Windows/SchemeSelectionWindow/SchemeSelectionWindow.xaml
+++ b/CanvasDragNDrop/Windows/SchemeSelectionWindow/SchemeSelectionWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CanvasDragNDrop.Windows.SchemeSelectionWindow"
         mc:Ignorable="d"
-        Title="Выбор схемы" Height="450" Width="550"
+        Title="Выбор схемы" Height="450" Width="600"
         Name="StartWindowView"
         Loaded="GetSchemasList">
     <Grid Margin="10">
@@ -17,10 +17,12 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
         <Label Content="Выберите существующую схему или создайте новую" Grid.Row="0" Grid.Column="0" FontWeight="Bold" FontSize="18" HorizontalContentAlignment="Center"/>
-        <Image Source="/Resources/settings.png" MouseLeftButtonDown="LeftButtonDownGoSetupWindow" Grid.Column="1" Width="30" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <ListView Grid.Row="1" Grid.ColumnSpan="2" 
+        <Image Source="/Resources/sync.png" MouseLeftButtonDown="GetSchemasList" Grid.Column="1" Width="30" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <Image Source="/Resources/settings.png" MouseLeftButtonDown="LeftButtonDownGoSetupWindow" Grid.Column="2" Width="30" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <ListView Grid.Row="1" Grid.ColumnSpan="3" 
                   ItemsSource="{Binding ElementName=StartWindowView, Path=AvailableSchemas}" 
                   SelectedIndex="{Binding ElementName=StartWindowView,Path=SelectedSchemaIndex}" 
                   Margin="0,10,0,10" 
@@ -37,6 +39,6 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Button Content="Создать новую схему" Grid.Row="2" Grid.ColumnSpan="2" FontSize="16" Click="CreateNewSchema"/>
+        <Button Content="Создать новую схему" Grid.Row="2" Grid.ColumnSpan="3" FontSize="16" Click="CreateNewSchema"/>
     </Grid>
 </Window>
